--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-query": "^5.85.5",
     "@types/lodash": "^4.17.13",
     "gh-pages": "^6.2.0",
     "jest": "^29.7.0",
@@ -18,6 +20,8 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
     "styled-components": "^6.1.13"
