--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.8.2",
+    "@apollo/client": "^4.0.6",
+    "@reduxjs/toolkit": "^2.9.0",
+    "@rtk-query/graphql-request-base-query": "^2.3.1",
     "@tanstack/react-query": "^5.85.5",
     "@types/lodash": "^4.17.13",
     "gh-pages": "^6.2.0",
+    "graphql": "^16.11.0",
+    "graphql-request": "^7.2.0",
     "jest": "^29.7.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
